Quelques améliorations autours de la vérification de conflits
